# rusty-kaspa

./: .gitignore  2025-11-19-ultrathink-about-a-solution-to-this-access-ssh-k.txt  Cargo.toml  Dockerfile  PHASE3-DCUTR-TEST-RESULTS.md  PHASE4-AUTONAT-DCUTR-INCOMPATIBILITY-CONFIRMED.md  PHASE4-CRITICAL-FINDING.md  PHASE4-DCUTR-ISSUE.md  PHASE4-TOGGLE-AUTONAT-WORKAROUND-FAILED.md  PHASE4-TOGGLE-REMOVAL-FIX-FAILED.md  README.md  docker-compose.yaml  entrypoint.sh  run_test.sh
.claude/: settings.local.json
.github/workflows/: ci.yaml  deploy.yaml
bridge/: .gitignore  README.md
cli/src/modules/: export.rs  mod.rs  multisig.rs  rpc.rs
cli/src/wizards/: account.rs  import.rs
components/addressmanager/src/: lib.rs  migrations.rs
components/connectionmanager/: Cargo.toml
components/connectionmanager/src/: lib.rs
consensus/benches/: check_scripts.rs
consensus/client/src/: covenant.rs  output.rs
consensus/core/src/: muhash.rs  tx.rs
consensus/core/src/config/: constants.rs  params.rs
consensus/core/src/hashing/: tx.rs
consensus/src/consensus/: mod.rs
consensus/src/model/services/: reachability.rs
consensus/src/processes/reachability/: inquirer.rs
consensus/src/processes/transaction_validator/: tx_validation_in_isolation.rs  tx_validation_in_utxo_context.rs
core/src/log/: appender.rs
crypto/txscript/errors/src/: lib.rs
crypto/txscript/examples/: covenant_id.rs  covenants.rs  kip-10.rs
crypto/txscript/examples/covenant-native-asset/: Cargo.toml
crypto/txscript/examples/covenant-native-asset/src/: covenants.rs  main.rs
crypto/txscript/src/: covenants.rs  data_stack.rs  lib.rs  scriptnum.rs  standard.rs
crypto/txscript/src/opcodes/: macros.rs  mod.rs
crypto/txscript/src/standard/: multisig.rs
database/rocknroll/: Cargo.toml
database/rocknroll/src/: finality-monitor.rs
database/src/: access.rs  key.rs  registry.rs
database/src/db/: conn_builder.rs
docs/: RELEASE_NOTES_v9.md
indexes/utxoindex/src/core/api/: mod.rs
kaspad/: Cargo.toml
kaspad/src/: args.rs  daemon.rs  libp2p.rs
protocol/flows/src/: flow_context.rs  lib.rs  service.rs
protocol/flows/src/v5/: address.rs  ping.rs
protocol/p2p/: Cargo.toml
protocol/p2p-compat-v8-tests/: Cargo.toml  build.rs
protocol/p2p-compat-v8-tests/proto/: p2p_v8.proto
protocol/p2p-compat-v8-tests/src/: lib.rs  tests.rs
protocol/p2p/proto/: p2p.proto
protocol/p2p/src/: echo.rs  lib.rs
protocol/p2p/src/convert/: messages.rs  net_address.rs
protocol/p2p/src/convert/model/: version.rs
protocol/p2p/src/core/: adaptor.rs  connection_handler.rs  connection_info.rs  hub.rs  mod.rs  peer.rs  router.rs
rothschild/src/: main.rs
rpc/core/src/api/: ops.rs  rpc.rs
rpc/core/src/model/: message.rs  peer.rs  tests.rs
rpc/core/src/wasm/: message.rs
rpc/grpc/client/src/: lib.rs
rpc/grpc/core/proto/: messages.proto  rpc.proto
rpc/grpc/core/src/: ops.rs
rpc/grpc/core/src/convert/: kaspad.rs  message.rs  peer.rs
rpc/grpc/server/src/request_handler/: factory.rs
rpc/grpc/server/src/tests/: rpc_core_mock.rs
rpc/service/src/: lib.rs  libp2p.rs  service.rs
rpc/service/src/converter/: protocol.rs
rpc/wrpc/client/src/: client.rs
rpc/wrpc/examples/covenants_counter/: Cargo.toml
rpc/wrpc/examples/covenants_counter/src/: covenant.rs  main.rs
rpc/wrpc/examples/covenants_native_asset/: Cargo.toml  README.md
rpc/wrpc/examples/covenants_native_asset/src/: covenants.rs  errors.rs  lib.rs  main.rs  native_asset_vm.rs  payload_layout.rs  result.rs  script_layout.rs  scriptnum.rs  tests.rs
rpc/wrpc/examples/simple_client/src/: main.rs
rpc/wrpc/server/src/: router.rs
rpc/wrpc/wasm/src/: client.rs
tcp-hole-punch/: README.md  TEST_SCENARIOS.md  final-report.md  final-verification.md  merge-readiness-checklist.md  plan-next.md  plan.md
tcp-hole-punch/bridge/: Cargo.toml  build.rs
tcp-hole-punch/bridge/proto/: bridge_test.proto
tcp-hole-punch/bridge/src/: lib.rs  stream.rs  swarm.rs  tonic_integration.rs
tcp-hole-punch/bridge/tests/: integration.rs
tcp-hole-punch/circuit-helper/: Cargo.toml
tcp-hole-punch/circuit-helper/src/: main.rs
tcp-hole-punch/design/: architecture.md  phase2-architecture.md
tcp-hole-punch/helper-protocol/: Cargo.toml
tcp-hole-punch/helper-protocol/src/: lib.rs
tcp-hole-punch/logs/: hotspot-scenario-summary.md  phase1-summary.md  phase10-diagnostic-2025-11-17.md  phase10-fix-2025-11-17.md  phase4-remote-success.md  phase5-hardened-run.md  phase6-remote-validation.md  vps-dialer-scenario.md
tcp-hole-punch/proof/: PHASE10-PROOF-SUMMARY.md
tcp-hole-punch/relay/: Cargo.toml
tcp-hole-punch/relay/src/: main.rs
tcp-hole-punch/research/: gemini.md  gpt.md  test-scenarios.md
tcp-hole-punch/scripts/: control_relay_service.sh  prove_libp2p_circuit.sh
testing/integration/src/: rpc_tests.rs
utils/src/: networking.rs
wallet/bip32/src/: address_type.rs  error.rs
wallet/core/src/: derivation.rs  error.rs  imports.rs  prelude.rs
wallet/core/src/account/: mod.rs  pskb.rs
wallet/core/src/account/pskb/: multisig.rs
wallet/core/src/account/variants/: bip32.rs  bip32watch.rs  keypair.rs  multisig.rs  watchonly.rs
wallet/core/src/api/: message.rs
wallet/core/src/storage/: interface.rs  mod.rs
wallet/core/src/storage/keydata/: data.rs
wallet/core/src/storage/local/: interface.rs
wallet/core/src/tests/: rpc_core_mock.rs
wallet/core/src/tx/: mass.rs  payment.rs
wallet/core/src/tx/generator/: generator.rs  pending.rs
wallet/core/src/utxo/: processor.rs
wallet/core/src/wallet/: mod.rs
wallet/keys/src/: lib.rs  prelude.rs  privkeygen.rs  pubkeygen.rs  signature.rs
wallet/keys/src/derivation/gen0/: hd.rs
wallet/pskt/: Cargo.toml
wallet/pskt/examples/: multisig.rs
wallet/pskt/src/: bundle.rs  convert.rs  error.rs  input.rs  output.rs  pskt.rs
(+3 files in other folders)
