[package]
name = "rocknroll"
description = "Kaspa Rocks DB exploration tool"
version.workspace = true
edition.workspace = true
authors.workspace = true
include.workspace = true
license.workspace = true

[[bin]]
name="rocknroll"
path="src/finality-monitor.rs"

[dependencies]
kaspa-core.workspace = true
kaspa-consensus.workspace = true
kaspa-consensus-core.workspace = true
kaspa-database.workspace = true
kaspa-rpc-core.workspace = true
kaspa-utils.workspace = true
kaspad.workspace = true

chrono.workspace = true
clap.workspace = true
log.workspace = true
rand.workspace = true
rayon.workspace = true
tokio = { workspace = true, features = ["rt", "macros", "rt-multi-thread"] }
workflow-terminal.workspace = true
async-trait.workspace = true
futures.workspace = true
workflow-core.workspace = true

# [dev-dependencies]
# criterion.workspace = true

# [[bench]]
# name = "bench"
# harness = false
