[package]
name = "hole-punch-bridge"
version = "0.1.0"
edition = "2021"

[dependencies]
libp2p = { version = "0.56", default-features = false, features = [
    "tcp",
    "dns",
    "noise",
    "yamux",
    "tls",
    "relay",
    "identify",
    "ping",
    "dcutr",
    "macros",
    "tokio",
    "quic"
] }
libp2p-stream = { version = "0.4.0-alpha", default-features = false }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time"] }
tonic = { version = "0.12", features = ["transport"] }
futures = "0.3"
thiserror = "2"
tracing = "0.1"
uuid = { version = "1", features = ["v4"] }
tokio-util = { version = "0.7", features = ["compat"] }
http = "1"
tower = { version = "0.4", features = ["util"] }
urlencoding = "2"

[workspace]
